<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_logout"
        android:icon="@drawable/icon_logout"
        android:title="@string/logout_menu_item"/>
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/icon_setttings"
        android:title="@string/settings_menu_item"/>
    <item
        android:id="@+id/menu_statistic"
        android:icon="@drawable/icon_statistic"
        android:title="@string/statistic_menu_item"/>
    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/icon_about"
        android:title="@string/about_menu_item"/>
    <item
        android:id="@+id/menu_exit"
        android:icon="@drawable/icon_exit"
        android:menuCategory="system"
        android:title="@string/exit_menu_item"/>
</menu>