<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <RelativeLayout
        android:id="@+id/fields"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <ImageView
            android:id="@+id/field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:scaleType="centerCrop" 
            android:src="@drawable/feeld02" />

        <ImageView
            android:id="@+id/field1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/field"
            android:layout_alignParentBottom="true" 
            android:scaleType="centerCrop"
            android:src="@drawable/feeld02" />

        <ImageView
            android:id="@+id/field2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/field"
            android:scaleType="centerCrop"
            android:layout_alignParentBottom="true" 
            android:src="@drawable/feeld02" />
    </RelativeLayout>

    <TableLayout
        android:id="@+id/cloudsAndSun"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <ImageView
                    android:id="@+id/cloud1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cloud01" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <ImageView
                    android:id="@+id/cloud3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cloud03" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/sun"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/sun" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right" >

                <ImageView
                    android:id="@+id/cloud2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cloud02" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <ImageView
                    android:id="@+id/cloud4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cloud04" />
            </LinearLayout>
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center" >

        <LinearLayout
            android:id="@+id/main_autorisation_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/application_titel_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/title" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/main_nameField"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/login_text_box_height"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/main_task_text_selector"
                    android:hint="@string/name"
                    android:inputType="textCapWords|textPersonName"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textSize="@dimen/login_text_box_text_size" >
                </EditText>

                <EditText
                    android:id="@+id/main_ageField"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/login_text_box_height"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/main_task_text_selector"
                    android:hint="@string/age"
                    android:inputType="number"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textSize="@dimen/login_text_box_text_size" >
                </EditText>

                <Button
                    android:id="@+id/main_enter_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:textColor="@android:color/white"
                    android:text="@string/enter_button_text"
                    android:textSize="@dimen/login_text_box_text_size" 
                    android:background="@drawable/enter_button_selector" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <!--
    <LinearLayout
        android:id="@+id/field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/main_autorisation_form"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/fon01"             
            android:scaleType="center"/>
    </LinearLayout>
    -->

</RelativeLayout>